--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "watch": "webpack --watch",
-    "start": "webpack serve --open --mode development"
+    "start": "webpack serve --open"
   },
   "keywords": [],
   "author": "",
