--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "uniqid": "^5.4.0"
   }
 }
